--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
-
+    <link rel="stylesheet" href="/build/components-set.css">
     <script type="module" src="/build/components-set.esm.js"></script>
     <script nomodule src="/build/components-set.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-    <webcam-player></webcam-player>
+    <my-component></my-component>
+    <div class="player-wrapper">
+      <webcam-player></webcam-player>
+    </div>
   </body>
 </html>
